--- a/Home.html
+++ b/Home.html
@@ -22,7 +22,7 @@
 
 </header>
 
-  <img src="/gifs/nebulas-uranus101.gif" class="gif">
+  <img src="/gifs/underwater.gif" class="gif">
 <div class="logIn">
       <h2>Log In Here</h2>
       <form>
@@ -36,8 +36,9 @@
         <a href="#">Forget Password</a>
       </form>
 </div>
-  
-  
+<footer class="footer">
+    <p>@Life Choices</p>
+</footer>   
 <script src="https://kit.fontawesome.com/cce18f0ce0.js" crossorigin="anonymous"></script>
 </body>
 </html>
