--- a/About.html
+++ b/About.html
@@ -76,7 +76,7 @@
 
     <section id="skills">
       <div class="container-fluid">
-        <h3>My Skills</h3>
+        <h3>My Skills:</h3>
         <ol>
           <li>
             <div class="col-md-3" style="width: 30vh";>
@@ -179,12 +179,10 @@
               />
               <h5 class="card-title">Plumstead High School</h5>
               <p class="card-text">
-                This is a wider card with supporting text below as a natural
-                lead-in to additional content. This content is a little bit
-                longer.
+                The subjects I had at high-school were: Business Studies, History and Geography.
               </p>
               <p class="card-text">
-                <small class="text-muted">From 2015 - 2022</small>
+                <small class="text-muted">From 2010 - 2014</small>
               </p>
             </div>
           </div>
@@ -202,12 +200,12 @@
               />
               <h5 class="card-title">University of the Western Cape</h5>
               <p class="card-text">
-                This is a wider card with supporting text below as a natural
-                lead-in to additional content. This content is a little bit
-                longer.
+                At University I double majored with History and Psychology. 
+                I thereafter obtained an Honours Degree in History, 
+                as well as my Masters the following year.
               </p>
               <p class="card-text">
-                <small class="text-muted">From 2010 - 2014</small>
+                <small class="text-muted">From 2015 - 2022</small>
               </p>
             </div>
           </div>
