--- a/About.html
+++ b/About.html
@@ -35,6 +35,9 @@
         <a href="#education"
           ><i class="fa fa-university" aria-hidden="true"></i> My Education</a
         >
+        <a href="#testimonials"
+          ><i class="fa fa-archive" aria-hidden="true"></i> Testimonials</a
+        >
 
         <div class="search-bar">
           <input type="search" text="Search" placeholder="Search" /><button>
@@ -211,6 +214,30 @@
           </div>
         </div>
       </div>
+
+      <div class="card mb-3" >
+        <div class="row g-1">
+          <div class="col-md-8">
+            <div class="card-body">
+              <img
+                src="./pics/LIFE-CHOICES-ACADEMY-LOGO-ON-BLUE-removebg-preview.png"
+                class="img-fluid rounded-start"
+                alt="..."
+              />
+              <h5 class="card-title">Life Choices Academy</h5>
+              <p class="card-text">
+                I then joined the Life Choices bootcamp Academy
+                where I learnt how to code professionally, as well as
+                learning the basics of software and web development.
+              </p>
+              <p class="card-text">
+                <small class="text-muted">From 2022 - 2023</small>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
     </section>
     <section id="testimonials">
       
