--- a/Home.html
+++ b/Home.html
@@ -22,7 +22,7 @@
 
 </header>
 
-  <img src="/gifs/underwater.gif" class="gif">
+  <img src="./gifs/underwater.gif" class="gif">
 <div class="logIn">
       <h2>Log In Here</h2>
       <form>
@@ -37,7 +37,7 @@
       </form>
 </div>
 <footer class="footer">
-    <p>@Life Choices</p>
+    <p> Copyrighted by ©Nikita Ramawoothar</p>
 </footer>   
 <script src="https://kit.fontawesome.com/cce18f0ce0.js" crossorigin="anonymous"></script>
 </body>
