--- a/Contact.html
+++ b/Contact.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href:"./contact.css">
+    <link rel="stylesheet" href="./contact.css" />
+    
     <link
-      href="https://getbootstrap.com/docs/5.2/assets/css/docs.css"
-      rel="stylesheet"
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
+    href="https://getbootstrap.com/docs/5.2/assets/css/docs.css"
+    rel="stylesheet"
+  />    
 </head>
 <body>
     <div class="container">
@@ -27,13 +28,13 @@
           <br>
           <br>
             <div class="social">
-                <a href="https://www.instagram.com/xx.aliyahh.xx?r=nametag" id="social-link"><i class="fa-brands fa-instagram"></i>Instagram</a>
+                <a href="#" id="social-link"><i class="fa-brands fa-instagram"></i> Instagram</a>
                 <br>
-                <a href="#" id="social-link"><i class="fa-brands fa-slack"></i>Slack</a>
+                <a href="#" id="social-link"><i class="fa-brands fa-slack"></i> Slack</a>
                 <br>
-                <a href="https://twitter.com/golden_ghoull?s=21&t=XF4X7Qtb2OF-AQkjicMGug" id="social-link"><i class="fa-brands fa-twitter"></i>Twitter</a>
+                <a href="#" id="social-link"><i class="fa-brands fa-twitter"></i> Twitter</a>
                 <br>
-                <a href="https://github.com/aliyahdutoit" id="social-link"><i class="fa-brands fa-github"></i>Github</a>
+                <a href="#" id="social-link"><i class="fa-brands fa-github"></i> Github</a>
             </div>
         </div>
           <!--Contact Form section-->
@@ -60,6 +61,10 @@
     <footer>
       <p>Copyrighted © Nikita Ramawoothar</p>
     </footer>
-    </section
+</section>
+<script
+      src="https://kit.fontawesome.com/cce18f0ce0.js"
+      crossorigin="anonymous"
+    ></script>
 </body>
 </html>
